# genshin-data

./: .gitignore  .gitmodules  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
genshin_data/: __init__.py  genshin_data.py
genshin_data/min/: data_chinese-simplified.min.json  data_chinese-traditional.min.json  data_english.min.json  data_french.min.json  data_german.min.json  data_indonesian.min.json  data_italian.min.json  data_japanese.min.json  data_korean.min.json  data_portuguese.min.json  data_spanish.min.json  data_turkish.min.json  data_vietnamese.min.json
genshin_data/types/: __init__.py  achievement.py  artifact.py  character.py  common_material.py  domain.py  elemental_stone_materials.py  exp.py  fishing.py  food.py  furnishing.py  genshin_data.py  ingredient.py  jewel_material.py  local_material.py  potion.py  talent_lvl_up_material.py  tcg_action.py  tcg_character.py  tcg_monster.py  weapon.py  weapon_primary_material.py  weapon_secondary_material.py
tests/: test_genshin_data.py
