[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "genshin-data"
description = "Python version of https://github.com/dvaJi/genshin-data"
authors = [
    { name = "dvaJi" },
    { name = "Victorsitou" }
]
license = { text = "MIT" }
dependencies = [
    "pydantic>=1.10.0,<1.11.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
